Fix background on small screens

--- a/src/styles/blog-post.css
+++ b/src/styles/blog-post.css
@@ -291,3 +291,18 @@ td:last-child {
   padding-left: 0.55rem;
   border-left: 0.45rem solid var(--hot-pink);
 }
+
+/**
+ * You will notice that when a highlighted line runs wider than the surrounding code block 
+ * container (causing a horizontal scrollbar), its background won’t be drawn for the initially 
+ * hidden, overflowing part. :(
+ *
+ * The fix consist of:
+ * 1. Make the element just wide enough to fit its content.
+ * 2. Always fill the visible space in .gatsby-highlight.
+ */
+.gatsby-highlight pre[class*="language-"] {
+  overflow: initial;
+  float: left; /* 1 */
+  min-width: 100%; /* 2 */
+}
